Update source for CSS sheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria's Portfolio</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <!-- using GOOGLE fonts: Barlow Semi Condensed: 
     Extra-Light 200 / Light 300 / Regular 400 / Medium 500 / Bold 700 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +23,7 @@
   <div class="page-wrapper">
     <div class="profiles">
       <div class="section">
-        <img src="/static/profile_pic.png" alt="Surfineer" height="150">
+        <img src="static/profile_pic.png" alt="Surfineer" height="150">
       </div>
       <div class="section">
         <ul class="list" style="list-style: none;">
