--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maria's Portfolio</title>
     <link rel="stylesheet" href="static/style.css">
-    <!-- using GOOGLE fonts: Barlow Semi Condensed: 
-    Extra-Light 200 / Light 300 / Regular 400 / Medium 500 / Bold 700 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@200;300;400;500;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-  <h1>Maria 'Surfineer' Scholz</h1>
+  <h1>Maria Scholz</h1>
+  <h4>'Surfineer'</h4>
   <h3>Welcome to my Portfolio!</h3>
   <img src="static/profile_pic.png" alt="Surfineer" height="150">
+  <p>Welcome to my online portfolio! I am passionate about software engineering and surfering, hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
+  <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. As a Google-Fangirl, I have chosen Google's Cloud services (GCP) for hosting my website projects.</p>
+  <p>My passion for both coding and surfing has taught me the importance of adaptability and balance in everything I do.</p>
+  <p>I invite you to explore my portfolio to see how I've combined my love for coding and surfing to create unique and
+  impactful projects. Thank you for visiting, and I look forward to sharing my journey with you.</p>
   <h3>Check out my profiles:</h3>
   <ul class="list" style="list-style: none;">
     <li><a href="https://www.linkedin.com/in/surfineer/" target="_blank">LinkedIn</a></li>
     <li><a href="https://github.com/surfineer" target="_blank">Github</a></li>
     <li><a href="https://replit.com/@surfineer" target="_blank">Replit</a></li>
   </ul>
-
 </body>
+</html>
