updates links, background and text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +12,21 @@
 <body>
   <h1>Maria Scholz</h1>
   <h4>'Surfineer'</h4>
+  <img src="static/profile_pic.png" alt="profile picture" height="150">
   <h3>Welcome to my Portfolio!</h3>
-  <img src="static/profile_pic.png" alt="Surfineer" height="150">
-  <p>Welcome to my online portfolio! I am passionate about software engineering and surfering, hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
-  <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. As a Google-Fangirl, I have chosen Google's Cloud services (GCP) for hosting my website projects.</p>
-  <p>My passion for both coding and surfing has taught me the importance of adaptability and balance in everything I do.</p>
-  <p>I invite you to explore my portfolio to see how I've combined my love for coding and surfing to create unique and
-  impactful projects. Thank you for visiting, and I look forward to sharing my journey with you.</p>
+  <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
+  <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. I have chosen Google's Cloud services (GCP) for hosting my website projects.</p>
+  <p>Thank you for visiting. I look forward to sharing my journey with you.</p>
   <h3>Check out my profiles:</h3>
-  <ul class="list" style="list-style: none;">
-    <li><a href="https://www.linkedin.com/in/surfineer/" target="_blank">LinkedIn</a></li>
-    <li><a href="https://github.com/surfineer" target="_blank">Github</a></li>
-  </ul>
+  <!-- <ul class="list" style="list-style: none;"> -->
+    <span><a href="https://www.linkedin.com/in/surfineer/" target="_blank"><img src="static/icons8-linkedin_contrast.svg" alt="linkedin icon"></a></span>
+    <span><a href="https://github.com/surfineer" target="_blank"><img src="static/icons8-github_contrast.svg" alt="github icon"></a></span>
+    <span><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/icons8-twitter_contrast.svg" alt="twitter x icon"></a></span>
+    <span><a href="https://instagram.com/maria_remote" target="_blank"><img src="static/icons8-instagram_contrast.svg" alt="instagram icon"></a></span>
+  <!-- </ul> -->
 </body>
+<footer>
+  <span>2023 | Maria Scholz</span>
+  <span>icons by <a target="_blank" href="https://icons8.com">Icons8</a></span>
+</footer>
 </html>
