--- a/index.html
+++ b/index.html
@@ -2,31 +2,52 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maria's Portfolio</title>
-    <link rel="stylesheet" href="static/style.css">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="author" content="Maria Scholz">
+    <meta name="description" content="Maria Scholz' is a Software Engineer and Web Developer. This Portfolio page showcases her skills and projects and contact information.">
+    <meta name="keywords" content="Maria Scholz, Portfolio, Web Development, Software Engineering">
+    <meta name="theme-color" content="#0a0112">
+    <title>Maria Scholz | Web Developer & Software Engineer</title>
+    <link rel="shortcut icon" href="static/favicons/laptop.ico">
+    <link rel="stylesheet" href="static/style.css" type="text/css">
+    <!-- FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@300;400;700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-  <h1>Maria Scholz</h1>
-  <h4>'Surfineer'</h4>
-  <img src="static/profile_pic.png" alt="profile picture" height="150">
-  <h3>Welcome to my Portfolio!</h3>
-  <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
-  <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. I have chosen Google's Cloud services (GCP) for hosting my website projects.</p>
-  <p>Thank you for visiting. I look forward to sharing my journey with you.</p>
-  <h3>Check out my profiles:</h3>
-  <!-- <ul class="list" style="list-style: none;"> -->
-    <span><a href="https://www.linkedin.com/in/surfineer/" target="_blank"><img src="static/icons8-linkedin_contrast.svg" alt="linkedin icon"></a></span>
-    <span><a href="https://github.com/surfineer" target="_blank"><img src="static/icons8-github_contrast.svg" alt="github icon"></a></span>
-    <span><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/icons8-twitter_contrast.svg" alt="twitter x icon"></a></span>
-    <span><a href="https://instagram.com/maria_remote" target="_blank"><img src="static/icons8-instagram_contrast.svg" alt="instagram icon"></a></span>
-  <!-- </ul> -->
+    <nav>
+      <ul>
+        <li><a href="./index.html">WHY HIRE ME?</a></li>
+        <li><a href="./index.html">my projects</a></li>
+        <li><a href="./index.html">contact</a></li>
+      </ul>
+    </nav>
+  <main>
+    <div id="container">
+      <!-- <img src="./static/background2.jpg" width="400"> -->
+      <section id="intro">
+        <h1>Maria Scholz</h1>
+        <h4>'Surfineer'</h4>
+        <img src="static/images/profile_pic.png" alt="profile picture" height="150">
+        <h3>Welcome to my Portfolio!</h3>
+        <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
+        <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. I use Google's Cloud services (GCP) for hosting my website projects.</p>
+        <p>Thank you for visiting. I look forward to sharing my journey with you.</p>
+      </section>
+    </div>
+    <section id="social_media">
+      <span><a href="https://www.linkedin.com/in/surfineer/" target="_blank"><img src="static/svgs/icons8-linkedin_contrast.svg" alt="linkedin icon"></a></span>
+      <span><a href="https://github.com/surfineer" target="_blank"><img src="static/svgs/icons8-github_contrast.svg" alt="github icon"></a></span>
+      <span><a href="https://replit.com/@surfineer" target="_blank"><img src="static/svgs/icons8-replit_contrast.svg" alt="replit icon"></a></span>
+      <span><a href="https://instagram.com/maria_remote" target="_blank"><img src="static/svgs/icons8-instagram_contrast.svg" alt="instagram icon"></a></span>
+      <span><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a></span>
+    </section>
+  </main>
+  <footer>
+    <span>2023 | Maria Scholz</span>
+    <span class="icons8">(icons by <a target="_blank" href="https://icons8.com">Icons8</a>)</span>
+  </footer>
 </body>
-<footer>
-  <span>2023 | Maria Scholz</span>
-  <span>icons by <a target="_blank" href="https://icons8.com">Icons8</a></span>
-</footer>
 </html>
