--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
 </head>
 <body>
     <nav>
-      <ul>
-        <li><a href="./index.html">WHY HIRE ME?</a></li>
-        <li><a href="./index.html">my projects</a></li>
-        <li><a href="./index.html">contact</a></li>
-      </ul>
+      <div>
+        <a href="./hire_me.html">WHY HIRE ME?</a>
+        <a href="./projects.html">my projects</a>
+        <a href="./contact.html">contact</a>
+        <a href="./contact.html">22222</a>
+      </div>
+      <div>
+        logo
+      </div>
     </nav>
   <main>
-    <div id="container">
-      <!-- <img src="./static/background2.jpg" width="400"> -->
+    <div class="container">
+      <img src="./static/backgrounds/beach_under_palmtree.jpg" width="400">
       <section id="intro">
         <h1>Maria Scholz</h1>
         <h4>'Surfineer'</h4>
-        <img src="static/images/profile_pic.png" alt="profile picture" height="150">
+        <img class="profile" src="static/images/profile_pic.png" alt="profile picture">
         <h3>Welcome to my Portfolio!</h3>
-        <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
+        <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software&nbsp;Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
         <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. I use Google's Cloud services (GCP) for hosting my website projects.</p>
         <p>Thank you for visiting. I look forward to sharing my journey with you.</p>
       </section>
@@ -46,8 +50,8 @@
     </section>
   </main>
   <footer>
-    <span>2023 | Maria Scholz</span>
-    <span class="icons8">(icons by <a target="_blank" href="https://icons8.com">Icons8</a>)</span>
+    <small>&copy 2023 | Maria Scholz</small>
+    <small class="icons8">(icons by <a target="_blank" href="https://icons8.com">Icons8</a>)</small>
   </footer>
 </body>
 </html>
