--- a/index.html
+++ b/index.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" dir="ltr">
+  
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
-    <meta name="author" content="Maria Scholz">
-    <meta name="description" content="Maria Scholz' is a Software Engineer and Web Developer. This Portfolio page showcases her skills and projects and contact information.">
-    <meta name="keywords" content="Maria Scholz, Portfolio, Web Development, Software Engineering">
-    <meta name="theme-color" content="#0a0112">
-    <title>Maria Scholz | Web Developer & Software Engineer</title>
-    <link rel="shortcut icon" href="static/favicons/laptop.ico">
-    <link rel="stylesheet" href="static/style.css" type="text/css">
-    <!-- FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@300;400;700&display=swap" rel="stylesheet">
-    
+  <!-- meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+  <meta name="author" content="Maria Scholz">
+  <meta name="description" content="Maria Scholz' is a Software Engineer and Web Developer. This Portfolio page showcases her skills and projects and contact information.">
+  <meta name="keywords" content="Maria Scholz, Portfolio, Web Development, Software Engineering">
+  <meta name="theme-color" content="#0a0112">
+  <!-- TITLE -->
+  <title>Maria Scholz | Portfolio</title>
+  <!-- icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- FONTS-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@200;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- CSS -->
+  <link rel="stylesheet" href="static/style.css" type="text/css">
 </head>
+
 <body>
-    <nav>
-      <div>
-        <a href="./hire_me.html">WHY HIRE ME?</a>
-        <a href="./projects.html">my projects</a>
-        <a href="./contact.html">contact</a>
-      </div>
-      <div>
-        logo
-      </div>
+  <header>
+    <h1 class="top-name"><span class="first-letter">M</span>aria<span class="first-letter">S</span>cholz</h1>
+    <h2 class="top-title">Web&nbsp;Developer | Software&nbsp;Engineer</h2>
+    <div id="banner"></div>
+    <nav role="navigation" aria-label="main menu">
+      <ul class="navbar">
+        <li><a href="./hire_me.html">hire me</a></li>
+        <li><a href="./projects.html">my projects</a></li>
+        <li><a href="./contact.html">contact</a></li>
+      </ul>
     </nav>
+  </header>
   <main>
-    <div class="container">
-      <img src="./static/backgrounds/beach_under_palmtree.jpg" width="400">
-      <section id="intro">
-        <h1>Maria Scholz</h1>
-        <h4>'Surfineer'</h4>
-        <img class="profile" src="static/images/profile_pic.png" alt="profile picture">
-        <h3>Welcome to my Portfolio!</h3>
-        <p>My two biggest passions in life are <strong>Surfing</strong> and <strong>Software&nbsp;Engineering</strong>. Hence I call myself a "surfineer". For me, this is the perfect life balance; keeping me engaged physically as well as mentally. Both discplines push me constantly for continuous learning and continuous improvement.</p>
-        <p>My journey so far has led me to specialize in Python programming including web development frameworks like Flask. I use Google's Cloud services (GCP) for hosting my website projects.</p>
-        <p>Thank you for visiting. I look forward to sharing my journey with you.</p>
-      </section>
-    </div>
+    <section id="intro">
+      <div id="container-left">
+        <img id="portrait" src="static/images/long_cut.jpg" height="600px" alt="Maria Scholz sitting in a luxurious chair, smiling">
+      </div>
+      <div id="container-right">
+        <h2>Welcome to my Portfolio!</h2>
+        <p>I currently work as a Software Engineer for in-house automation projects at a big semiconductor-supplier company. However, my passion is Web Development and I am currently on a journey to become a Full-Stack Developer.</p> 
+        <p>So far I am using</p>
+          <ul class="tool-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python Flask</li>
+          </ul>
+        <p>for my online projects. Make sure to check in again later, as I am ramping up my skill set and portfolio!</p>
+        <p><b>I love building websites!</b> If you have a website project, I would be delighted to build it! <sub>(for free😉)</sub></p>
+        <p>Thank you for visiting! And watch this space - as I keep advancing...</p>
+      </div>
+    </section>
     <section id="social_media">
-      <span><a href="https://www.linkedin.com/in/surfineer/" target="_blank"><img src="static/svgs/icons8-linkedin_contrast.svg" alt="linkedin icon"></a></span>
-      <span><a href="https://github.com/surfineer" target="_blank"><img src="static/svgs/icons8-github_contrast.svg" alt="github icon"></a></span>
-      <span><a href="https://replit.com/@surfineer" target="_blank"><img src="static/svgs/icons8-replit_contrast.svg" alt="replit icon"></a></span>
-      <span><a href="https://instagram.com/maria_remote" target="_blank"><img src="static/svgs/icons8-instagram_contrast.svg" alt="instagram icon"></a></span>
-      <span><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a></span>
+      <span>
+        <a href="https://www.linkedin.com/in/maria-scholz/" target="_blank"><img src="static/svgs/icons8-linkedin_contrast.svg" alt="linkedin icon"></a>
+        <a href="https://github.com/surfineer" target="_blank"><img src="static/svgs/icons8-github_contrast.svg" alt="github icon"></a>
+        <a href="https://replit.com/@surfineer" target="_blank"><img src="static/svgs/icons8-replit_contrast.svg" alt="replit icon"></a>
+        <a href="https://instagram.com/maria_remote" target="_blank"><img src="static/svgs/icons8-instagram_contrast.svg" alt="instagram icon"></a>
+        <a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a>
+      </span>
     </section>
   </main>
   <footer>
     <small>&copy 2023 | Maria Scholz</small>
-    <small class="icons8">(icons by <a target="_blank" href="https://icons8.com">Icons8</a>)</small>
   </footer>
 </body>
+
 </html>
