--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   </header>
   <main>
     <section id="intro">
-      <div id="container-left">
-        <img id="portrait" src="static/images/long_cut.jpg" height="600px" alt="Maria Scholz sitting in a luxurious chair, smiling">
+      <div class="container" id="container-left">
+        <img id="portrait" src="static/images/long_cut.jpg" height="600" alt="Maria Scholz sitting in a luxurious chair, smiling">
       </div>
-      <div id="container-right">
+      <div class="container" id="container-right">
         <h2>Welcome to my Portfolio!</h2>
         <p>I currently work as a Software Engineer for in-house automation projects at a big semiconductor-supplier company. However, my passion is Web Development and I am currently on a journey to become a Full-Stack Developer.</p> 
         <p>So far I am using</p>
