--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Maria Scholz, Portfolio, Web Development, Software Engineering">
   <meta name="theme-color" content="#0a0112">
   <!-- TITLE -->
-  <title>Maria Scholz | Portfolio</title>
+  <title>Maria Scholz | Web Developer & Software Engineer</title>
   <!-- icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/static/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/static/favicons/favicon-32x32.png">
@@ -27,48 +27,89 @@
 
 <body>
   <header>
-    <h1 class="top-name"><span class="first-letter">M</span>aria<span class="first-letter">S</span>cholz</h1>
-    <h2 class="top-title">Web&nbsp;Developer | Software&nbsp;Engineer</h2>
+    <section id="name-title">
+      <h1 class="top-name"><a href="/">Maria</a></h1>
+      <h1 class="top-name"><a href="/">Scholz</a></h1>
+      <h2 class="top-title">Web&nbsp;Developer | Software&nbsp;Engineer</h2>
+    </section>
     <div id="banner"></div>
-    <nav role="navigation" aria-label="main menu">
-      <ul class="navbar">
-        <li><a href="./hire_me.html">hire me</a></li>
-        <li><a href="./projects.html">my projects</a></li>
-        <li><a href="./contact.html">contact</a></li>
-      </ul>
+    <div id="dynamic-stack">
+      <h3>my stack</h3>
+      <p>python flask pandas HTML CSS</p> <!-- build some dynamic display -->
+    </div>
+    <nav aria-label="main menu">
+      <ol class="navbar">
+        <li><a href="#about">about me</a></li>
+        <li><a href="#projects">my projects</a></li>
+        <li><a href="#skills">skills</a></li>
+        <li><a href="#experience">work experience</a></li>
+        <li><a href="#education">education</a></li>
+      </ol>
     </nav>
   </header>
   <main>
-    <section id="intro">
-      <div class="container" id="container-left">
-        <img id="portrait" src="static/images/long_cut.jpg" height="600" alt="Maria Scholz sitting in a luxurious chair, smiling">
-      </div>
-      <div class="container" id="container-right">
-        <h2>Welcome to my Portfolio!</h2>
-        <p>I currently work as a Software Engineer for in-house automation projects at a big semiconductor-supplier company. However, my passion is Web Development and I am currently on a journey to become a Full-Stack Developer.</p> 
-        <p>So far I am using</p>
-          <ul class="tool-list">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Python Flask</li>
-          </ul>
-        <p>for my online projects. Make sure to check in again later, as I am ramping up my skill set and portfolio!</p>
-        <p><b>I love building websites!</b> If you have a website project, I would be delighted to build it! <sub>(for free😉)</sub></p>
-        <p>Thank you for visiting! And watch this space - as I keep advancing...</p>
-      </div>
+    <section id="intro" aria-label="introduction">
+        <div class="left-container">
+          <picture class="portrait"> <!-- does not work, need to make it scale with two different pictures -->
+            <source media="(width:752px)" srcset="static/images/square_cut.jpg">
+            <source media="(width:934px)" srcset="static/images/long_cut.jpg">
+            <img id="portrait" src="static/images/square_cut.jpg" alt="Maria Scholz sitting in a chair, smiling">
+          </picture>
+        </div>
+        <div class="right-container">
+          <h2>Welcome to my Portfolio!</h2>
+          <p>I currently work as a Software Engineer for in-house automation projects at a big semiconductor-supplier company. However, my passion is Web Development and I am currently on a journey to become a Full-Stack Developer.</p> 
+          <p>Make sure to check in again later, as I am ramping up my skill set and portfolio!</p>
+          <p><b>I love building websites!</b> If you have a website project, I would be delighted to build it! <sub>(for free😉)</sub></p>
+          <p>Thank you for visiting! And watch this space - as I keep advancing...</p>
+        </div>
     </section>
-    <section id="social_media">
-      <span>
-        <a href="https://www.linkedin.com/in/maria-scholz/" target="_blank"><img src="static/svgs/icons8-linkedin_contrast.svg" alt="linkedin icon"></a>
-        <a href="https://github.com/surfineer" target="_blank"><img src="static/svgs/icons8-github_contrast.svg" alt="github icon"></a>
-        <a href="https://replit.com/@surfineer" target="_blank"><img src="static/svgs/icons8-replit_contrast.svg" alt="replit icon"></a>
-        <a href="https://instagram.com/maria_remote" target="_blank"><img src="static/svgs/icons8-instagram_contrast.svg" alt="instagram icon"></a>
-        <a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a>
-      </span>
+    <section id="about" aria-label="about me">
+      <h2>About Me</h2>
+    <!--  Maybe take the test again? 
+          Make the Letters expand when hovering over them, with their full description, eg. "J" -> "Judging" -->  
+      <p>My personality type is <a href="https://www.16personalities.com/istj-personality">"ISTJ-A"</a>, which means that I am a fact-focused, practical person. I am a good listener and very attentive to details.</p>
+      <p>Sometimes however, I can really lose myself in work and forget that I am human. In order to keep that work-life balance, I go <em>Surfing</em>, do <em>Yoga</em> and <em>meditate</em>.</p>
+    </section>
+    <section id="projects" aria-label="projects">
+      <h2>Projects</h2>
+    </section>
+    <section id="skills" aria-label="skills">
+      <h2>Skills</h2>
+    </section>
+    <section id="experience" aria-label="work experience">
+      <h2>Work Experience</h2>
+      <ol>
+        <li id="Toppan-FEDEV"></li>
+        <li id="Toppan-CS"></li>
+        <li id="Schuetze"></li>
+        <li id="TEL"></li>
+        <li id="Google"></li>
+      </ol>
+    </section>
+    <section id="education">
+      <h2>Education</h2>
+      <ol>
+        <li id="Codecademy"></li>
+        <li id="Linkedin"></li>
+        <li id="replit"></li>
+        <li id="UoE"></li>
+      </ol>
     </section>
   </main>
   <footer>
-    <small>&copy 2023 | Maria Scholz</small>
+    <div id="social-media">
+      <ul>
+        <li><a href="https://www.linkedin.com/in/maria-scholz/" target="_blank"><img src="static/svgs/icons8-linkedin_contrast.svg" alt="linkedin icon"></a></li>
+        <li><a href="https://github.com/surfineer" target="_blank"><img src="static/svgs/icons8-github_contrast.svg" alt="github icon"></a></li>
+        <li><a href="https://replit.com/@surfineer" target="_blank"><img src="static/svgs/icons8-replit_contrast.svg" alt="replit icon"></a></li>
+        <li><a href="https://instagram.com/maria_remote" target="_blank"><img src="static/svgs/icons8-instagram_contrast.svg" alt="instagram icon"></a></li>
+        <li><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a></li>
+      </ul>
+    </div>
+    
+    <small>&copy; 2023 | Maria Scholz</small>
+    
   </footer>
 </body>
 
