finalized design link

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                     <li><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a></li>
                 </ul>
                 </div>
-                <a id="design-link" href="design.html">Check out my design for this page</a>
                 <small>&copy; 2023 | Maria Scholz</small>
+                <a id="design-link" href="design.html" title="Check out my design system for this page">🎨</a>
             </footer>
 
         </div>
