first styling education section

--- a/index.html
+++ b/index.html
@@ -154,28 +154,28 @@
 
                     <section id="education">
                         <h3>Education & Resources</h3>
-                        <ol>
-                            <li>
+                        <ol class="collapse">
+                            <li title="Click for more info">
                                 <h4>Linkedin Learning</h4>
                                 <p>70+ courses</p>
                                 <p>since Oct 2020</p>
                             </li>
-                            <li>
+                            <li title="Click for more info">
                                 <h4>Codecademy</h4>
                                 <p>Full-Stack Engineer Career Path</p>
                                 <p>since Sep 2023</p>
                             </li>
-                            <li>
+                            <li title="Click for more info">
                                 <h4>Data Camp</h4>
                                 <p>Python Programmer Track</p>
                                 <p>since Sep 2023</p>
                             </li>
-                            <li>
+                            <li title="Click for more info">
                                 <h4>Replit</h4>
                                 <p>90 Days of Code (Python)</p>
                                 <p>Dec 2022 - Apr 2023</p>
                             </li>
-                            <li>
+                            <li title="Click for more info">
                                 <h4>University of Edinburgh</h4>
                                 <p>BSc Environmental Science & Ecology</p>
                                 <p>Sep 2013 - May 2016</p>
