styled work experience section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
                     <section id="experience">
                         <h3>Work Experience</h3>
-                        <ol>
-                            <li>
+                        <ol class="time-line">
+                            <li class="position">
                                 <h4>Toppan Photomasks</h4>
                                 <p class="job-title">Front End Software Development Engineer</p>
                                 <p>since Sep 2023</p>
@@ -112,7 +112,7 @@
                                     <li>Finding innovative techniques to enhance workflow efficiency and adopt agile project management methodology.</li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="position">
                                 <h4 class="hidden">Toppan Photomasks</h4>
                                 <p class="job-title">Technical Customer Service Specialist</p>
                                 <p>Mar 2020 - Aug 2023</p>
@@ -122,7 +122,7 @@
                                     <li>Led customer review meetings and status reporting, contributing to elevated customer satisfaction rates.</li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="position">
                                 <h4>Nortal (former Schuetze)</h4>
                                 <p class="job-title">IT-Project Management Assistant</p>
                                 <p>Jul 2019 - Feb 2020</p>
@@ -131,7 +131,7 @@
                                     <li>Supported both strategic and operational project activities, ensuring alignment with business goals.</li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="position">
                                 <h4>Tokyo Electron</h4>
                                 <p class="job-title">Sales Administrative Assistant</p>
                                 <p>Mar 2018 - Feb 2013</p>
@@ -140,7 +140,7 @@
                                     <li>Played a key role in customs documentation and export control procedures.</li>
                                 </ul>
                             </li>
-                            <li>
+                            <li class="position">
                                 <h4>Google Maps</h4>
                                 <p class="job-title">Data Quality Evaluator</p>
                                 <p>Mar 2010 - Feb 2013</p>
