added example site built

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                         <aside class="hidden">My Stack: Python HTML CSS Flask</aside>
                     </section>
                     
+                    <section id="sites">
+                        <h3>Sites I have built</h3>
+                        <p>Check out my most recent page built from <a href="/example-sites/tea-cozy/img-tea-cozy-redline.jpg">blue print</a> to finished site.</p>
+                        <a href="/example-sites/tea-cozy/tea-cozy.html">Tea Cozy</a>
+                    </section>
+
                     <section id="projects">
                         <h3>Projects</h3>
                         <ul class="project-grid">
