updated style project section

--- a/index.html
+++ b/index.html
@@ -50,19 +50,30 @@
                         </div>
                         <aside class="hidden">My Stack: Python HTML CSS Flask</aside>
                     </section>
-                    
-                    <section id="sites">
-                        <h3>Sites I have built</h3>
-                        <p>Check out my most recent page built from <a href="/example-sites/tea-cozy/img-tea-cozy-redline.jpg">blue print</a> to finished site.</p>
-                        <a href="/example-sites/tea-cozy/tea-cozy.html">Tea Cozy</a>
-                    </section>
 
                     <section id="projects">
                         <h3>Projects</h3>
                         <ul class="project-grid">
-                            <li title="coming up next!">Daily Wisdom</li>
-                            <li title="coming up next!">Today in Japanese</li>
-                            <li title="coming up next!">Count Down</li>
+                            <li>
+                                <h4 class="project-title"><a href="/example-sites/tea-cozy/tea-cozy.html">Tea Cozy Website</a></h4>
+                                <p>For this exercise from a Codecademy course I built a website for a Tea Shop according to the provided <a href="/example-sites/tea-cozy/img-tea-cozy-redline.jpg">mock-up</a>.</p>
+                                <small>Hosted on <span>Github</span></small>
+                            </li>
+                            <li title="coming soon!">
+                                <h4 class="project-title">Daily Wisdom</h4>
+                                <p>Check in here for your daily dose of inspirational quote, one piece of wisdom for every day.</p>
+                                <small>Hosted on <span>GCP</span> using <span>Flask</span> and <span>Firestore</span></small>
+                            </li>
+                            <li title="coming soon!">
+                                <h4 class="project-title">Today in Japanese</h4>
+                                <p>This page will tell you the current day of the week in Japanese!</p>
+                                <small>Hosted on <span>GCP</span> using <span>Flask</span></small>        
+                            </li>
+                            <li title="coming soon!">
+                                <h4 class="project-title">Count Down</h4>
+                                <p>Enter a date you are looking forward to and see how many days to go!</p>
+                                <small>Hosted on <span>GCP</span> using <span>Flask</span></small>
+                            </li>
                         </ul>
                     </section>
 
