updated style skill section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <p>I am self-taught with a strong desire to try new projects, discover problems and find innovative ways to solve them. My work ethics are grounded in a belief that <b>'everything is figure-out-able'</b>. I learn fast, apply knowledge practically and understand the power of collaboration.</p>
                             <p>My second passion in life is <b>Surfing</b>, which is the perfect balance for me (along with Yoga and Meditation) after spending hours in front of the computer. Check out my surf blog at <a href="//https:www.surfineer.com" target="_blank" title="will be online soon :)">Surfineer.com</a>!</p>
                         </div>
-                        <aside class="hidden">My Stack: Python HTML CSS Flask</aside>
+                        <aside id="my-stack" class="hidden">My Stack: Python HTML CSS Flask</aside>
                     </section>
 
                     <section id="projects">
@@ -79,9 +79,9 @@
 
                     <section id="skills">
                         <h3>Skills</h3>
-                        <div class="stack-wrapper">
-                            <div class="stack-item">
-                                <h4>Soft (Human) Skills</h4>
+                        <div class="skill-wrapper">
+                            <div class="skill-item">
+                                <h4 class="skill-category">Soft (Human) Skills</h4>
                                 <ul>
                                     <li>Strategic Problem Solving</li>
                                     <li>Adabtability</li>
@@ -91,22 +91,22 @@
                                 </ul>
                             </div>
                                 <h4 class="hidden">Technical Skills</h4>
-                            <div class="stack-item">
-                                <h5>Programming Languages</h5>
+                            <div class="skill-item">
+                                <h5 class="skill-category">Programming Languages</h5>
                                 <ul>
                                     <li>Python</li>
                                     <li>HTML</li>
                                     <li>CSS</li>
                                 </ul>
                             </div>
-                            <div class="stack-item">
-                                <h5>Libraries & Frameworks</h5>
+                            <div class="skill-item">
+                                <h5 class="skill-category">Libraries & Frameworks</h5>
                                 <ul>
                                     <li>Flask</li>
                                 </ul>
                             </div>
-                            <div class="stack-item">
-                                <h5>Tools & Platforms</h5>
+                            <div class="skill-item">
+                                <h5 class="skill-category">Tools & Platforms</h5>
                                 <ul>
                                     <li>Google Cloud Platform</li>
                                     <li>GIT, Github, Gitlab</li>
