updated style education section

--- a/index.html
+++ b/index.html
@@ -171,32 +171,63 @@
 
                     <section id="education">
                         <h3>Education & Resources</h3>
-                        <ol class="collapse">
-                            <li title="Click for more info">
-                                <h4>Linkedin Learning</h4>
-                                <p>70+ courses</p>
-                                <p>since Oct 2020</p>
+                        <ol>
+
+                            <li class="education-item" title="Click for more info">
+                                <input type="checkbox" id="collapse-linkedin" class="hidden toggle">
+                                <label for="collapse-linkedin">
+                                    <h4 class="clickable">Linkedin Learning</h4>
+                                </label>
+                                <div class="details">
+                                    <p>70+ courses</p>
+                                    <small>since Oct 2020</small>
+                                </div>
                             </li>
-                            <li title="Click for more info">
-                                <h4>Codecademy</h4>
-                                <p>Full-Stack Engineer Career Path</p>
-                                <p>since Sep 2023</p>
+
+                            <li class="education-item" title="Click for more info">
+                                <input type="checkbox" id="collapse-codecademy" class="hidden toggle">
+                                <label for="collapse-codecademy">
+                                    <h4 class="clickable">Codecademy</h4>
+                                </label>
+                                <div class="details">
+                                    <p>Full-Stack Engineer Career Path</p>
+                                    <small>since Sep 2023</small>
+                                </div>
                             </li>
-                            <li title="Click for more info">
-                                <h4>Data Camp</h4>
-                                <p>Python Programmer Track</p>
-                                <p>since Sep 2023</p>
+
+                            <li class="education-item" title="Click for more info">
+                                <input type="checkbox" id="collapse-datacamp" class="hidden toggle">
+                                <label for="collapse-datacamp">
+                                    <h4 class="clickable">Data Camp</h4>
+                                </label>
+                                <div class="details">
+                                    <p>Python Programmer Track</p>
+                                    <small>since Sep 2023</small>
+                                </div>
                             </li>
-                            <li title="Click for more info">
-                                <h4>Replit</h4>
-                                <p>90 Days of Code (Python)</p>
-                                <p>Dec 2022 - Apr 2023</p>
+
+                            <li class="education-item" title="Click for more info">
+                                <input type="checkbox" id="collapse-replit" class="hidden toggle">
+                                <label for="collapse-replit">
+                                    <h4 class="clickable">Replit</h4>
+                                </label>
+                                <div class="details">
+                                    <p>90 Days of Code (Python)</p>
+                                    <small>Dec 2022 - Apr 2023</small>
+                                </div>
                             </li>
-                            <li title="Click for more info">
-                                <h4>University of Edinburgh</h4>
-                                <p>BSc Environmental Science & Ecology</p>
-                                <p>Sep 2013 - May 2016</p>
+
+                            <li class="education-item" title="Click for more info">
+                                <input type="checkbox" id="collapse-UoE" class="hidden toggle">
+                                <label for="collapse-UoE">
+                                    <h4 class="clickable">University of Edinburgh</h4>
+                                </label>
+                                <div class="details">
+                                    <p>BSc Environmental Science & Ecology</p>
+                                    <small>Sep 20213 - May 2016</small>
+                                </div>
                             </li>
+
                         </ol>
                     </section>
                 </main>
@@ -211,7 +242,7 @@
                     <li><a href="https://twitter.com/maria_remote" target="_blank"><img src="static/svgs/icons8-twitter_contrast.svg" alt="twitter x icon"></a></li>
                 </ul>
                 </div>
-                <small>&copy; 2023 | Maria Scholz</small>
+                <small class="made-by">&copy; 2023 | Maria Scholz</small>
                 <a id="design-link" href="design.html" title="Check out my design system for this page">🎨</a>
             </footer>
 
