added raja surf school as project

--- a/index.html
+++ b/index.html
@@ -62,10 +62,15 @@
                         </li>
 
                         <li>
+                            <a href="https://surfineer.github.io/rajasurfschool/" target="_blank"><h4 class="project-title">Raja Surf School</h4></a>
+                            <p>Multi-page website built for a friend's surf school in Sri Lanka.</p>
+                            <small>Hosted on <span>Github</span></small>
+                        </li>
+
+                        <li>
                             <a href="/example-sites/tea-cozy/tea-cozy.html" target="_blank"><h4 class="project-title">Tea Cozy Website</h4></a>
                             <p>For this exercise from a Codecademy course I built a website for a Tea Shop according to the provided <a href="/example-sites/tea-cozy/img-tea-cozy-redline.jpg">mock-up</a>.</p>
                             <small>Hosted on <span>Github</span></small>
-                            
                         </li>
 
                         <li title="coming soon!">
