small content changes, header media query

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                             <ul>
                                 <li>Google Cloud Platform</li>
                                 <li>GIT, Github, Gitlab</li>
+                                <li>Linux / Bash</li>
                                 <li>OpenProject</li>
                                 <li>Atlassian</li>
                             </ul>
@@ -137,7 +138,7 @@
                     <ol class="time-line">
                         <li class="position">
                             <h4>Toppan Photomasks</h4>
-                            <p class="job-title">Front End Software Development Engineer</p>
+                            <p class="job-title">Software Engineer</p>
                             <p>since Sep 2023</p>
                             <ul>
                                 <li>Driving process automation and continuous improvement projects to optimize data preparation and order entry procedures.</li>
