implemented hamburger navbar for mobile layout

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <h2>Software&nbsp; Engineer & Web&nbsp;Developer</h2>
             </header>
             
+            <button type="button" id="hamburger" class="navbar-style">☰</button>
+
             <nav class="navbar">
                 <ol class="nav-wrapper">
                     <li><a href="#about">about me</a></li>
@@ -283,9 +285,21 @@
                 
                 <div class="fineprint">
                     <small class="made-by">&copy; 2023 | Maria Scholz</small>
-                    <small class="version">v1.01</small>
+                    <small class="version">v1.02</small>
                 </div>
             </footer>
         </div>
+
+        <script>
+            document.querySelector('#hamburger').addEventListener('click', function () {
+                    const nav = document.querySelector('.navbar');
+                    if (nav.style.display === 'block') {
+                        nav.style.display = 'none';
+                    } else {
+                        nav.style.display = 'block';
+                    }
+                });
+        </script>
+
     </body>
 </html>
